--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,13 @@
 /* CSS */
 
 @keyframes bg-blink {
-    0%, 49% {
+    5%, 45% {
         background: #FFF;
     }
 
-    50%, 100% {
+    55%, 95% {
         background: transparent;
     }
-}
-
-body {
-    padding: 0 .1rem;
 }
 
 a {
@@ -41,24 +37,25 @@ pre {
 
 /* APP */
 
-#app, #term {
-    min-height: 100vh;
+.app {
+    padding: 0 .1rem;
 }
 
-#term {
+.term {
+    min-height: 100vh;
     cursor: text;
 }
 
-#term_prompt {
+.term__prompt {
     display: flex;
-    height: 1rem;
 }
 
-#term_command {
+.term__ps1 {
+    white-space: pre;
     flex-shrink: 0;
 }
 
-#term_input {
+.term__input-hidden {
     display: block;
     width: 0;
     height: 0;
@@ -66,12 +63,11 @@ pre {
     border: none;
 }
 
-#term_input_display {
+.term__input-display {
     max-width: 100%;
-    padding-left: calc( .5rem + 1px );
 }
 
-#term_input_blink.blink-active {
+.term__input-blink.blink-active {
     display: inline;
     width: .5rem;
     position: relative;
