--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,8 @@ pre {
 
 .term__input-blink.blink-active {
     display: inline;
-    width: 1ch;
     position: relative;
-    background: #FFF9;
+    width: .5rem;
+    position: relative;
+    background: #FFF;
 }
