--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,15 @@
 /* CSS */
 
+@keyframes bg-blink {
+    5%, 45% {
+        background: #FFF;
+    }
+
+    55%, 95% {
+        background: transparent;
+    }
+}
+
 a {
     color: #3FF;
 }
@@ -27,12 +37,6 @@ pre {
 
 /* APP */
 
-::selection,
-::-moz-selection {
-    color: #000;
-    background: #FFF;
-}
-
 .app {
     padding: 0 .1rem;
 }
@@ -47,8 +51,8 @@ pre {
 }
 
 .term__ps1 {
-    flex-shrink: 0;
     white-space: pre;
+    flex-shrink: 0;
 }
 
 .term__input-hidden {
@@ -61,13 +65,11 @@ pre {
 
 .term__input-display {
     max-width: 100%;
-    white-space: pre;
 }
 
 .term__input-blink.blink-active {
     display: inline;
-    position: relative;
     width: .5rem;
     position: relative;
-    background: #FFF;
+    animation: bg-blink infinite linear 1s;
 }
